@@ -1,27 +1,40 @@
 package com.jackyblackson.idunntemplates.core.domain;
 
+import com.jackyblackson.idunntemplates.core.permission.PermissionNames;
 import com.jackyblackson.idunntemplates.core.store.dao.TemplateDao;
 import com.j256.ormlite.field.DatabaseField;
 import com.j256.ormlite.table.DatabaseTable;
+import com.jackyblackson.idunntemplates.core.utils.NullGettable;
+import jakarta.persistence.*;
+import org.hibernate.annotations.JdbcTypeCode;
+import org.hibernate.type.SqlTypes;
 
 import java.io.File;
 import java.util.UUID;
 
+@Entity
+@Table(name = "idunn_templates")
 @DatabaseTable(tableName = "idunn_templates", daoClass = TemplateDao.class)
 public class Template {
 
+    @Id
+    @JdbcTypeCode(SqlTypes.VARCHAR)
     @DatabaseField(id = true)
     private UUID id;
 
+    @Column(unique = true, nullable = false)
     @DatabaseField(unique = true, canBeNull = false)
     private String path;
 
+    @Column
     @DatabaseField(index = true)
     private String name;
 
     // 外键关联：TemplateMetadata
     // foreignAutoRefresh = true 会自动加载 metadata 数据
     // foreignAutoCreate = true 会在保存 template 时自动保存 metadata
+    @OneToOne(cascade = CascadeType.ALL, fetch = FetchType.EAGER)
+    @JoinColumn(name = "metadata_id", referencedColumnName = "template_id")
     @DatabaseField(foreign = true, foreignAutoRefresh = true, foreignAutoCreate = true, columnName = "metadata_id")
     private TemplateMetadata metadata;
 
@@ -52,6 +65,10 @@ public class Template {
 
     public TemplateVersion getLatestVersion() {
         if (metadata.getVersions().isEmpty()) return null;
-        return metadata.getVersions().get(metadata.getVersions().size() - 1);
+        return metadata.getVersions().getLast();
+    }
+
+    public String getUsePermissionNode() {
+        return PermissionNames.Templates.usePath$R + "." + this.path.replace("/", ".");
     }
 }
